--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="hero">
         <div class="header">
-            Header Logo
+            <p>Header Logo</p>
         <div class="headerLinks">
             <ul>
                 <li>header link one</li>
@@ -24,12 +24,12 @@
         </div>
         <div class="heroContent">
             <div class="heroInfo">
-                <h1>This Website is awesome</h1>
+                <h1>This Website is Awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
                 <button>Sign Up</button>
             </div>
             <div class="heroImage">
-                <img src="Images/nyc.avif">
+                <img width="500" height="300" src="Images/nyc.avif">
             </div>
         </div>
     </div>
