--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     <div class="hero">
         <div class="header">
             <p>Header Logo</p>
-        <div class="headerLinks">
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </div>
+            <div class="headerLinks">
+                <ul>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
         </div>
         <div class="heroContent">
             <div class="heroInfo">
-                <h1>This Website is Awesome</h1>
+                <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
-                <button>Sign Up</button>
+                <button>Sign up</button>
             </div>
             <div class="heroImage">
-                <img width="500" height="300" src="Images/nyc.avif">
+                <img width="500" height="250" src="Images/nyc.avif">
             </div>
         </div>
     </div>
